src/electron/views/automated-checks/automated-checks-view.scss
// Copyright (c) Microsoft Corporation. All rights reserved.
// Licensed under the MIT License.
@import '../../../common/styles/colors.scss';
@import '../common/window-title/window-title-const.scss';

:global(.is-mac-os) .settings-panel-layer-host {
    top: $mac-title-height !important;
}
.settings-panel-layer-host {
    top: $default-title-height !important;
}

.automated-checks-view {
    display: flex;
    flex-direction: column;
    height: 100%;
    width: 100%;

    -webkit-app-region: no-drag;
    background-color: $neutral-2;

    .automated-checks-panel-layout {
        display: flex;
        height: 100%;
        main {
            margin-top: 16px;
            margin-bottom: 16px;
            margin-left: 24px;
            margin-right: 24px;
        }
        .main-content-wrapper {
            width: 70%;
            flex-grow: 1;
            flex-shrink: 1;
            flex-basis: auto;
            overflow: auto;
            min-width: 220px;
        }
    }

    :global(.report-instance-table-label-overrides) {
        width: 127px;
    }
}

